Fixed bug where OK Response added Allowed Origin Header a second time